fj/src/test/resources/tests/constructor1.fj
class A extends Object {
  Object f;
  A(Object g) {
    super();
    this.f = g;
  }
}
